# earthly-ci

./: .gitignore  Earthfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: integrate.yaml
src/: __main__.py
src/data/: fetch.py  plot.py
src/defs/: file.py
src/model/: trainer.py
test/: test_files.py
