[project]
name = "earthly-ci"
version = "0.1.0"
description = ""
authors = [
    {name = "trunk", email = "a@b.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.3.2,<1.4.0)",
    "matplotlib (>=3.8.1,<3.9.0)",
    "numpy (>=1.26.2,<1.27.0)",
    "pandas (>=2.1.3,<2.2.0)"
]


[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
    "I", "B", "C", "E", "F", "W", "B9", "UP", "PL"
    ]

ignore = [
    "W191", "E731", "B905", "PLR0913", "PLC0414"
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"